--- a/ifts6/package.json
+++ b/ifts6/package.json
@@ -21,7 +21,9 @@
     "@types/node": "^20.8.4",
     "express": "^4.18.2",
     "mssql": "^10.0.1",
+    "primeng": "^16.6.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.32",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
